# climateCCR

./: .gitignore  .pre-commit-config.yaml  ASSET_MAP.md  CCR_MOC.md  CLAUDE.md  CONSOLIDATION_PLAN.md  HAZ_MOC.md  MKT_MOC.md  OBSIDIAN_SETUP.md  README 2.md  README.md  REPO_STRUCTURE.md  _INDEX.md  environment.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: canon-lookup.md
.claude/commands/: compact-canon.md  digest.md  handoff-to-claude-ai.md  link-check.md  new-note.md  warmstart.md
configs/: climate_jump_demo.yaml  climate_jump_real.yaml  default.yaml  hazard_jump_calibration.yaml  hazard_jump_calibration_2000_2024.yaml  hw1f_diagnostics.yaml  inpc_anual.yaml  loss_to_mark_scale.yaml  loss_to_rate_scale.yaml  loss_to_rate_scale_2000_2024.yaml  loss_to_rate_scale_2016_2024.yaml  market_calibration.yaml  pimpa_fixture.yaml  requirements_sequia.txt  sie_series.yaml  urls_cenapres_impactos_socio.txt
context/: 00_README_CONTEXT.md  DATA_CONTRACTS.md  DECISIONS.md  GLOSSARY.md  OPEN_QUESTIONS.md  REFERENCES.md  WORKFLOW.md
literature/: climate_integrated_investment_analysis.md  climate_investment_analysis.tex  refs.bib
literature/Compagnoni et al. - 2023 - On the effectiveness of Randomized Signatures as R/: Compagnoni et al. - 2023 - On the effectiveness of Randomized Signatures as R.md  Compagnoni et al. - 2023 - On the effectiveness of Randomized Signatures as R_meta.json
literature/Compagnoni_2023_RandomizedSignatures/: Compagnoni_2023_RandomizedSignatures.md
literature/Cuchiero_2022_DiscreteTimeSignatures/: Cuchiero_2022_DiscreteTimeSignatures.md  Cuchiero_2022_DiscreteTimeSignatures_meta.json
literature/Mandel et al. - 2025 - Mapping global financial risks under climate change/: Mandel et al. - 2025 - Mapping global financial risks under climate change_meta.json
literature/Mandel_2025_MappingFinancialRisks/: Mandel_2025_MappingFinancialRisks.md
notes/phases/: PHASE_0.md
notes/pipelines/: DISENO_pipeline_autos_CNSF.md  Guia_MDB_Automoviles_CNSF.md  README_scraper_cnsf.md  README_sequia.md  dashboard_riesgo_excel.md  shared_entity_cleaner_clasificar_entidad.md
notes/plan/: PHASE_0.md  PROJECT_PLAN.md
notes/reading/: 2026-07-02_climate_jump_channel.md  2026-07-05_vault_formatting.md  2026-07-05_viz_layer_horizons.md  2026-07-11_cnsf_harness_data_consolidation.md  2026-07-11_ponytail_minimalism.md  2026-07-16_hazard_jump_calibration.md  2026-07-16_summary_explanations_workflow.md  2026-07-18_cnsf_agro_dq_inspeccion.md  2026-07-18_k_scale_deflation.md  2026-07-19_rate_leg_event_study.md  2026-07-20_mkt_calibration.md  2026-07-21_cenapred_extension_regime_runs.md
notes/reviews/: CODE_REVIEW.md  PONYTAIL_AUDIT_2026-07-11.md
notes/setup/: CLAUDE_CODE_ONBOARDING.md  README.md
notes/sources/: cenapred.md  ibtracs.md  mexican_data_sources.md
notes/summary_explanations/: 2026-07-16_hazard_jump_calibration_explained.md  2026-07-18_cnsf_agro_dq_inspeccion_explained.md  2026-07-18_k_scale_deflation_explained.md  2026-07-19_rate_leg_event_study_explained.md  2026-07-20_hw1f_estimator_disagreement_explained.md  2026-07-21_cenapred_regime_break_and_otis_explained.md
notes/theory/: ChangeOfMeasureInFinance.md  Vasicek_Calibracion_Mex.md  climate_exposed_countries.md  climate_risk_data_requirements_bonds.md  diseno_calibracion_funciones_impacto_mexico.md  instrumentos_deuda_mexico.md  mexican_yield_curve_methodology.md  monte_carlo_climate_risk_applications.md  monte_carlo_risk_management_framework.md  ngfs_short_term_scenarios_summary.md  referencias_riesgo_catastrofico.md  referencias_weather_derivatives.md
notes/theory/general_notes/: climate_risk_credit_methodology_references.md  how_to_use_NGFS_PolicyRate.md
notes/theory/hull_white_1f/: Calibration_From_SIE_Banxico_01.md  Calibration_From_SIE_Banxico_02.md  HWModel_Theory.md  Hull-White-1F-calibration.md  Hull_White_Comprehensive.md  Hull‑White_theta_Intuition.md  all_info.md  market_calibration.md
pipelines/: 00_smoke_test.py  01_climate_jump_demo.py  02_climate_jump_figures.py  03_hazard_jump_calibration.py  04_loss_to_mark_scale.py  05_download_sie_series.py  06_loss_to_rate_scale.py  07_market_calibration.py  08_hw1f_diagnostics_figures.py
scraps/: pre_claude_code_checklist.txt
src/climateCCR/: __init__.py
src/climateCCR/calibration/: __init__.py
src/climateCCR/data/: __init__.py  inspeccion.py
src/climateCCR/inference/: __init__.py
src/climateCCR/infra/: __init__.py  config.py  logging_utils.py  manifest.py  paths.py  reproducibility.py
src/climateCCR/viz/: ccr.py  (+4 more)
tests/: conftest.py  test_infra.py
tests/calibration_financial/: test_bond_yield.py  test_gbm.py  test_hull_white.py  test_yield_curve.py
tests/calibration_impact/: test_hazard_jump.py  test_rate_response.py
tests/data/: test_inspeccion.py  test_sie.py  test_yahoo.py
tests/fixtures/: catalogo_fenomenos_test.xlsx
tests/processes/: test_climate_jumps.py
tests/risk_ccr/: climate_jump_baseline.py  pimpa_baseline.py  test_climate_jump_regression.py  test_pimpa_regression.py  test_time_grid_densification.py
tests/viz/: test_viz.py
(+111 files in other folders)
