[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climateCCR"
version = "0.0.1"
description = "Climate-narrative-aware counterparty credit risk analysis (MSc QF thesis, UZH/ETH)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Thesis author" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",          # NOTE: PIMPA uses removed `DataFrame.iteritems()`; migrate to `.items()` during the Phase-0 PIMPA move.
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "black>=24",
    "ruff>=0.4",
    "pre-commit>=3",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
