[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climateCCR"                     # kept (INT-02); the climrisk rename was rejected (UNAM name collision)
version = "0.0.1"
description = "Climate-risk-aware financial-risk pipeline for Mexico: data -> calibration -> simulation -> risk metrics, integrating counterparty-credit (CCR), market/rate (MKT) and physical-hazard (HAZ) arms via a climate-driven jump-diffusion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Thesis author" }]  # TODO: fill in name / institution

# Core stack = the CCR spine + MKT numerics. Arm-specific stacks live in the
# optional-dependency groups below so the base install stays light. The drought
# pins come from notas/requirements_sequia.txt; the rest are grounded in the
# actual imports of the ported HAZ pipelines.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",          # PIMPA used the removed DataFrame.iteritems(); fixed to .items() in the Phase-0 move (CCR-MIG-02)
    "scipy>=1.10",
    "scikit-learn>=1.3",    # signatures readout (Ridge) — currently unimported, kept on purpose for the planned signatures work (CCR-SIG-04)
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "black>=24",
    "ruff>=0.4",
    "pre-commit>=3",
    "mypy>=1.8",
]

# HAZ pipelines (CNSF / IBTrACS / CENAPRED / drought).
# Grounded in the imports of src/climateCCR/data/hazard_mx/** and notas/requirements_sequia.txt.
haz = [
    "requests>=2.31",       # scrapers (CNSF, CENAPRED, IBTrACS downloads)
    "beautifulsoup4>=4.12", # HTML parsing
    "lxml>=5.0",            # bs4 backend / XML
    "openpyxl>=3.1",        # CNSF .xlsx consolidation
    "geopandas>=0.13",      # INEGI shapefiles, state attribution
    "shapely>=2.0",
    "pyproj>=3.5",          # EPSG:6372 reprojection (correct km buffers)
    "xarray>=2023.1",       # ERA5 / drought .nc
    "netCDF4>=1.6",
    "cdsapi>=0.7",          # Copernicus Climate Data Store (requires ~/.cdsapirc)
    "pyarrow>=12.0",        # optional parquet output (drought pipeline falls back to CSV if absent)
]

# CLIMADA subnational impact-function calibration (HAZ-CLIMADA-*).
# Heavy, with its own large dependency tree, so it is isolated in its own extra.
climada = [
    "climada>=4.0",
]

# Bayesian calibration of the subnational impact functions (HAZ-CLIMADA-05).
# NEW work: calibration/impact is to be built. cmdstanpy is the optional Stan
# replication of the PyMC model.
bayes = [
    "pymc>=5",
    "arviz>=0.17",
    # "cmdstanpy>=1.2",     # optional: Stan replication of the hierarchical model
]

# Convenience meta-extra (setuptools supports self-referential extras).
all = ["climateCCR[dev,haz,climada,bayes]"]

# ── Non-Python toolchains (NOT installed by pip) ───────────────────────────────
#   • R utilities (e.g. data/market Actualiza_FTIIE.R) need the R packages
#     siebanxicor, tidyverse, dotenv — install via the R toolchain.
#   • CNSF autos .mdb extraction uses mdbtools (a system package) invoked from
#     explorar_mdb_cnsf.sh — install via your OS package manager (apt/brew).

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true          # many geo/climate libs ship without type stubs

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not network'"        # network tests are opt-in: run them with `pytest -m network`
markers = [
    "integration: end-to-end tests on fixtures (e.g. the PIMPA EE/PE regression, pipeline smoke)",
    "network: tests that hit live data sources (CNSF / NOAA / CDS); deselected by default",
]
